Small screens: adjust layout, spacing, sizing, labels.
Also make some HTML fixes to improve semantic structure and adjust headings
for uniformity with some other pages. (#174)

--- a/gobotany/simplekey/templates/simplekey/privacy.html
+++ b/gobotany/simplekey/templates/simplekey/privacy.html
@@ -17,8 +17,7 @@
         <div class="content">
             <div class="container">
                 <div id="main">
-                    <h2>Legal Information</h2>
-                    <h3>Privacy Policy</h3>
+                    <h2>Privacy Policy</h2>
                     <p>Go Botany is designed to gather and disseminate 
                     information about plant distribution and abundance 
                     across the six states of New England, USA, and 
@@ -26,8 +25,7 @@
                     governs the use of personal information from the site 
                     and you agree to be bound to this policy as a user of 
                     the Site.</p>
-                    <br />
-                    <h4>Submitted Information</h4>
+                    <h3>Submitted Information</h3>
                     <p>Personal Information is voluntarily supplied by you 
                     when you register and submit data to the <a 
                     href="{% url plantshare-placeholder %}">PlantShare</a> sector 
@@ -39,7 +37,6 @@
                     understanding of the PlantShare participants and Go Botany 
                     visitors and to determine how best to improve the web site 
                     for Go Botany users.</p>
-                    <br />
                     <p>You are able to view your personal observations (plant 
                     sightings, postings, and questions to the Botanist) and 
                     those of others (if they have made them available to you, 
@@ -47,7 +44,6 @@
                     your observations of species and their locations plus an 
                     supporting information you provide, may be available to 
                     other PlantShare users.</p>
-                    <br />
                     <p>Plant observations are the most important pieces of 
                     information that we collect. Details of a plant sighting 
                     and its associated location (species, numbers, etc.) are 
@@ -56,21 +52,18 @@
                     sighting to the Site.  Only information pertaining to 
                     plant observations is available to your selected users; 
                     no personal contact information is ever made public.</p>
-                    <br />
                     <p>Cookies are pieces of data that we store on your 
                     computer to tie your information to the PlantShare 
                     program. Cookies allow you to store your login 
                     information, so that you will not be required to log 
                     in each time you visit the PlantShare web site.</p>
-                    <br />
                     <p>Internet browsers allow you to determine whether 
                     or not to accept cookies (check under the preferences 
                     or options in the browser menu). If you decide not to 
                     accept cookies, you can still use the PlantShare site, 
                     but you will need to re-enter login information each 
                     time you visit.</p>
-                    <br />
-                    <h4>Sensitive Species</h4>
+                    <h3>Sensitive Species</h3>
                     <p>If you submit an unusual observation or a sighting of a 
                     plant known to be listed as Endangered, Threatened, 
                     Special Concern, Historic or Invasive in a New England 
@@ -78,8 +71,7 @@
                     confirm your sighting.  Your email address and contact 
                     information will not be sold or distributed outside New 
                     England Wild Flower Society.</p>
-                    <br />
-                    <h4>Your practices in obtaining sightings</h4>
+                    <h3>Your Practices in Obtaining Sightings</h3>
                     <p>As a conservation organization, New England Wild Flower 
                     Society seeks to limit disturbance to plants, especially 
                     those that are rare or occur on private property. Please 
@@ -90,8 +82,7 @@
                     landowner permissions have been obtained and that posting 
                     of locational and other data has been approved by the 
                     landowner.</p>
-                    <br />
-                    <h4>Changes to This Privacy Policy</h4>
+                    <h3>Changes to this Privacy Policy</h3>
                     <p>We may occasionally update or amend New England Wild 
                     Flower Society’s Privacy Statement. If we make changes, 
                     we will post the changes here.</p>
