Small screens: Advanced Map: adjust spacing, hover states.
Make a couple of minor spacing adjustments. Fix the styles that remove the
hover state on smartphones and tablets, which needed to be moved into
the new responsive styles section at the bottom of the CSS file. (#174)

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1133,15 +1133,15 @@ div.section.namap div.trans { /* Transparent div to make North America map objec
 
 #advanced-map #plant-map-list { margin: 10px 0; }
 
-#advanced-map #group-section { height: 220px; }
+#advanced-map #group-section { height: 200px; }
 
-#advanced-map #plant-map-list .plant-group { cursor: pointer; float: left; height: 185px; margin: 0 10px 10px 0; padding: 0; position: relative; width: 110px; }
+#advanced-map #plant-map-list .plant-group { cursor: pointer; float: left; height: 185px; margin: 0 10px 10px 0; padding: 2px 0 0; position: relative; width: 110px; }
 
 #advanced-map #plant-map-list .plant-group.last { margin: 0 0 10px 0; }
 
 #advanced-map .plant-group h5 { bottom: 146px; color: #508e31; font-size: 12px; line-height: 120%; margin: 0 0 0 0; padding: 6px 0 6px 5px; position: absolute; width: 105px; }
 
-#advanced-map .plant-group div.image { position: absolute; top: 38px; }
+#advanced-map .plant-group div.image { position: absolute; top: 40px; }
 
 #advanced-map .plant-subgroup div.image { position: relative; }
 
@@ -1151,10 +1151,10 @@ div.section.namap div.trans { /* Transparent div to make North America map objec
 
 #advanced-map .plant-group.active h5 { background: #1a2e12; color: #fff; }
 
-/* Don't include hover states on smartphones and tablets. */
-@media only screen and (min-device-width:1025px) { #advanced-map .plant-group:hover .frame { border-color: #1a2e12; }
-  #advanced-map .plant-group:hover h5 { background: #1a2e12; color: #fff; }
-  #advanced-map .more-info:hover { color: #508e31; text-decoration: underline; } }
+#advanced-map .plant-group:hover .frame { border-color: #1a2e12; }
+
+#advanced-map .plant-group:hover h5 { background: #1a2e12; color: #fff; }
+
 #advanced-map .plant-group .img-container { height: 101px; margin-bottom: 6px; overflow: hidden; width: 110px; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
 
 #advanced-map #plant-map-list p.video { background: url(/static/images/icons/icon3.png) left 4px no-repeat transparent; margin: 2px 0; padding: 3px 0 0 22px; }
@@ -1418,6 +1418,8 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #getting-started a.screenshot img.screenshot-thumb { margin: 10px 0 0; }
   #getting-started a.onward-btn { float: none; margin: 0 auto 20px; }
   #advanced-map #plant-map-list { margin-left: 8px; margin-right: 8px; margin-top: 0; }
+  #advanced-map .plant-group:hover .frame { border: 5px solid rgba(255, 255, 255, 0.8); }
+  #advanced-map .plant-group:hover h5 { background: inherit; color: #508e31; }
   #glossary header h1 { width: auto; }
   #glossary #alphabet { line-height: 250%; width: auto; }
   #glossary #alphabet li { border: 0; padding: 1px 10px; }
