Small screens: Species page: adjust layout, spacing, and sizing.
Reformat the species page elements to all fit on small screens without the
page having a scroll bar: scrolling image gallery, characteristics lists,
table of New England status information, etc. If the table's contents are
still too wide for the screen width, such as on smartphone/portrait mode,
the table is able to scroll horizontally. (#174)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -162,6 +162,7 @@
                 <h3>New England Distribution and Conservation Status</h3>
                 <p>Exact status definitions can vary from state to
                 state. For precise details, please check with your state.</p>
+                <div id="ne-status">
                 <table>
                     <thead>
                         <tr>
@@ -216,6 +217,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
+                </div>
 
             </div>
 
@@ -270,7 +272,7 @@
                     <div class="trans"></div>
                     <a class="enlarge" href="#">
                         <img src="/static/images/icons/zoom.png" alt="">
-                        Click to enlarge</a>
+                        Enlarge</a>
                 </div>
 
                 <div class="section">
