--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1290,6 +1290,7 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   .app .list-item h3 { clear: left; }
   #about #main > img { width: 57%; }
   #about #main img.bookcover { width: auto; }
+  #taxon #species-images { width: 310px; }
   #advanced-map #group-section { height: 600px; }
   #glossary #alphabet { height: 99px; } }
 /* Landscape-orientation styles */
@@ -1304,6 +1305,7 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #home #banner #overlay { top: 172px; }
   #home #banner > img { height: 172px; }
   #home #banner + .three-col { padding-top: 400px; }
+  #taxon #species-images { width: 470px; }
   #advanced-map #group-section { height: 400px; }
   #glossary #alphabet { height: 66px; } }
 /* These styles are common to both smartphone widths */
@@ -1354,7 +1356,8 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #home #banner #overlay img { width: 53%; }
   #home #banner a#cta { background-position: 50% 0; margin: 6px; }
   #home .three-col { background: none; float: none; height: inherit; margin: 14px 0; padding: 0; width: auto; }
-  #breadcrumb p, #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a, .app h2, .app p.tip, .app .list-item, .app #main p, .app #main h3, #about #main ul { margin-left: 8px; margin-right: 8px; }
+  #main #breadcrumb p, #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a, .app h2, .app p.tip, .app .list-item, .app #main p, .app #main h3, #about #main ul, #taxon #main p { margin-left: 8px; margin-right: 8px; }
+  #main #breadcrumb p { line-height: 160%; }
   #home .three-col a.learn-more { margin-top: 6px; }
   #home #potd { padding: 8px; }
   #home #potd > a { margin: 0; margin-bottom: 4px; margin-right: 8px; }
@@ -1388,8 +1391,6 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   .app .list-item p { padding-left: 0; }
   .app .list-item a.plant-in-group { margin-left: 15px; }
   .app .not-my-plant { display: none; }
-  #plant-id-3 .section + .section { margin-bottom: 16px; }
-  #plant-id-3 #sidebar .scroll + .section { margin: 0 0 32px; }
   /* Levels 1 and 2 */
   .list-item a.plant-in-group { clear: left; }
   .list-item .details { float: none; width: inherit; }
@@ -1398,6 +1399,20 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #plant-id-3 .content .container { padding: 0; width: 960px; }
   #plant-id-3 #sidebar { float: left; margin: 0; padding: 0; width: 228px; }
   #plant-id-3 #main h3.species-count-heading { white-space: nowrap; }
+  #plant-id-3 .section + .section { margin-bottom: 16px; }
+  #plant-id-3 #sidebar .scroll + .section { margin: 0 0 32px; }
+  #taxon h3 { font-size: 18px; }
+  #taxon #main > .characteristics dl { margin-left: 8px; margin-right: 8px; }
+  #taxon ul.full-description > li div { padding-left: 0; }
+  #taxon .characteristics dl dt { clear: none; float: none; text-align: left; width: auto; }
+  #taxon .characteristics dl dd { margin-left: auto; padding-left: 28px; }
+  #taxon .description-control { margin-left: 8px; margin-right: 8px; }
+  #taxon #ne-status { /* Horiz. scroll for status table if too wide */ overflow-x: auto; width: 100%; }
+  #taxon table { margin-left: 2px; margin-top: 0; width: 99%; }
+  #taxon th { text-transform: none; }
+  #taxon td, #taxon tbody th.status { font-size: 10px; }
+  #taxon tbody th.status { padding-left: 0; text-align: right; }
+  #taxon tbody th, #taxon thead td { white-space: normal; width: auto; }
   #intro-overlay { font-size: 150%; }
   #advanced-id #main .dk-landing-section { margin-top: 14px; }
   #advanced-id #main .dk-landing-section, #advanced-id #main .dk-landing-section:first-child { height: auto; margin-left: 8px; margin-right: 8px; width: auto; }
