--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -3313,7 +3313,7 @@ $tooltip-arrow-rotation: 225deg;
         margin: 0 0 32px;
     }
 
-    #taxon h3 {
+    #taxon h3, #taxon .note {
         font-size: 18px;
     }
     #taxon #main > .characteristics dl {
