Use requirejs loader for local development.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -42,8 +42,8 @@
         {% if not in_production %}
 
         <!-- DEVELOPMENT FILES -->
-        <script src="/static/scripts/dojo_config.js"></script>
-        <script src="/static/scripts/dojo/dojo.js.uncompressed.js"></script>
+        <script src="/static/scripts/requirejs/require.uncompressed.js"></script>
+        <script src="/static/scripts/require_config.js"></script>
 
         {% else %}
 
