Clean up template in preparation for indexing its text.
Change some markup and remove some commented-out code so that the template
text will be cleaner for adding to the search engine index. (#181)

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -83,19 +83,9 @@
 
     <p>The boxes above show how we have grouped over 3,000 New
     England plants into six major categories, which we call
-    &#8220;groups.&#8221; These groups contain smaller subsets of species we
-    have organized into &#8220;subgroups.&#8221; These are not scientific
+    <em>groups.</em> These groups contain smaller subsets of species we
+    have organized into <em>subgroups.</em> These are not scientific
     categories, but rather groupings of superficially similar plants that
     seem to belong together. The goal is to make identification easier.</p>
-
-    {% comment %}
-    <p class="vid">
-        <!-- TODO: Change YouTube ID to actual groups/subgroups video
-                   clip when it becomes available -->
-        <a rel="shadowbox;height=380;width=640;"
-            href="http://www.youtube.com/v/VWDc9oyBj5Q&amp;autoplay=1">View a short video
-            explaining plant groups and subgroups</a>
-    </p>
-    {% endcomment %}
 </div>
 {% endblock %}
