--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -216,7 +216,7 @@ nav #search button { background: #508e31 url(/static/images/layout/search-btn.pn
 nav #search button:active { background-position: 0 -20px; }
 
 /* Active navigation state */
-#plant-id li.plant-id a, #plant-id-2 li.plant-id a, #plant-id-3 li.plant-id a, #plantshare li.plantshare a, #advanced-id li.advanced-id a, #teaching-tools li.teaching-tools a, #about li.about a { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; }
+#plant-id li.plant-id a, #plant-id-2 li.plant-id a, #plant-id-3 li.plant-id a, #plantshare li.plantshare a, #advanced-id li.advanced-id a, #teaching-tools li.teaching-tools a, #about li.about a, #getting-started li.about a, #advanced-map li.about a, #glossary li.about a, #video-help-topics li.about a, #contrib li.about a { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; }
 
 #plantshare #sidebar a:hover, #teaching-tools #sidebar a:hover, #advanced-id #sidebar a:hover, #privacy-policy #sidebar a:hover, #terms-of-use #sidebar a:hover { text-decoration: none; }
 
