Ensure that search suggest is included on all pages.
Include it globally in the base template instead of from each
page type. (#196)

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -60,6 +60,7 @@
             require(["/static/build/deploy/gobotany.application.js"], function(app) {
             {% endif %}
 
+            require(['util/activate_search_suggest']);
             {% block js_require %}{% endblock %}
 
             {% if in_production %}
